--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,13 @@
+collections:
+  testjobs:
+  testcontracts:
+
+defaults:
+  - scope:
+      path: ""
+      type: "jobs"
+    values:
+      layout: "job"
 
 
 plugins:
