--- a/_data/testcv.yml
+++ b/_data/testcv.yml
@@ -3,27 +3,35 @@ skills:
     Junit: 3 years
     Selenium: 2 months
     ScalaTest: 6 months
+    ScalaCheck: 6 months
+    Jenkins CI: 4 years
+    Jira: 6 years
   Languages:
     "Shell (bash, ksh)": 20 years
     Perl: 16 years
     SQL:  14 years
+    Java: 10 years
+    Scala: 6 months
+    Python: 4 years
   Environments:
     Solaris: 10 years
     CentOS/Redhat: 8 years
     Sybase: 8 years
     Oracle: 4 years
+    MySQL: 2 years
+    PostgreSQL: 2 years
 education:
   "Qualifications and Education":
-    - 2013	ISTQB Foundation — ISEB.
-    - 2010	ITIL v3 Foundation — ISEB.
-    - 1988–1991	BSc (Hons) Degree Computer Science — University of Leeds, W. Yorkshire.
-    - 1981–1988	4 ‘A’-levels and 10 ‘O’-levels — Hipperholme Grammar School, W. Yorkshire.
+    - 2013 ISTQB Foundation — ISEB.
+    - 2010 ITIL v3 Foundation — ISEB.
+    - 1988–1991 BSc (Hons) Degree Computer Science — University of Leeds, W. Yorkshire.
+    - 1981–1988 4 ‘A’-levels and 10 ‘O’-levels — Hipperholme Grammar School, W. Yorkshire.
   "Non-Qualification Courses":
-    - 2019	HSE First-aid in the Workplace.
-    - 2007	Advanced Eurex Administration.
-    - 2004	Java Programming.
-    - 2001	GL Trade Server Management, Eurex MISS Installation/Administration, Eurex Clearing.
-    - 2000	Solaris 7 System Administration I, Solaris 7 System Administration II.
-    - 1996	Advanced AIX Administration, Project Management - A Goal Oriented Approach.
-    - 1994	C Programming for Unix Systems.
-    - 1992	Introduction to SQL / Fastrack to Sybase.
+    - 2019 HSE First-aid in the Workplace.
+    - 2007 Advanced Eurex Administration.
+    - 2004 Java Programming.
+    - 2001 GL Trade Server Management, Eurex MISS Installation/Administration, Eurex Clearing.
+    - 2000 Solaris 7 System Administration I, Solaris 7 System Administration II.
+    - 1996 Advanced AIX Administration, Project Management - A Goal Oriented Approach.
+    - 1994 C Programming for Unix Systems.
+    - 1992 Introduction to SQL / Fastrack to Sybase.
