--- a/.github/workflows/jekyll_bootstrap.yml
+++ b/.github/workflows/jekyll_bootstrap.yml
@@ -49,9 +49,9 @@ jobs:
           JEKYLL_ENV: production
       - name: make cv pdf
         run: |
-          apt update
-          apt install -y weasyprint
-          ln -s $PWD/_site/assets /
+          sudo apt update
+          sudo apt install -y weasyprint
+          sudo ln -s $PWD/_site/assets /
           weasyprint _site/cv.html _site/cv.pdf
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
