--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,6 +47,12 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+      - name: make cv pdf
+        run: |
+          sudo apt update
+          sudo apt install -y weasyprint
+          sudo ln -s $PWD/_site/assets /
+          weasyprint _site/cv.html _site/cv.pdf          
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
