--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -51,8 +51,9 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
-      - name: make cv pdf
+      - name: setup chromium
         uses: browser-actions/setup-chrome@v1
+      - name: make a pdf cv
         run: |
           sudo ln -s $PWD/_site/assets /
           cd _site
