--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           sudo apt install ttf-mscorefonts-installer
           sudo fc-cache -f
+          fc-match Arial
       - name: setup chromium
         uses: browser-actions/setup-chrome@v1
       - name: make a pdf cv
